force-app/main/default/objects/Planned_Meal__c/Planned_Meal__c.object-meta.xml
<CustomObject>
    <label>Planned Meal</label>
    <pluralLabel>Planned Meals</pluralLabel>
    <nameField>
        <label>Planned Meal Name</label>
        <type>AutoNumber</type>
        <displayFormat>PM-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>