force-app/main/default/objects/Planned_Meal__c/fields/Has_Leftovers__c.field-meta.xml
<CustomField>
    <fullName>Has_Leftovers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this meal is expected to have leftovers for future meals</inlineHelpText>
    <label>Has Leftovers</label>
    <type>Checkbox</type>
</CustomField>