force-app/main/default/objects/Planned_Meal__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>