force-app/main/default/objects/Planned_Meal__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Meal</label>
    <referenceTo>Meal__c</referenceTo>
    <relationshipLabel>Planned Meals</relationshipLabel>
    <relationshipName>Planned_Meals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>