force-app/main/default/objects/Planned_Meal__c/fields/Meal_Date__c.field-meta.xml
<CustomField>
    <fullName>Meal_Date__c</fullName>
    <label>Meal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>