force-app/main/default/objects/Planned_Meal__c/fields/Meal_Time__c.field-meta.xml
<CustomField>
    <fullName>Meal_Time__c</fullName>
    <label>Meal Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
                <default>true</default>
                <label>Dinner</label>
            </value>
            <value>
                <fullName>Snack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>