force-app/main/default/objects/Planned_Meal__c/fields/Prep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prep_Notes__c</fullName>
    <inlineHelpText>Special notes for preparing this meal (e.g., &quot;Marinate chicken night before&quot;, &quot;Use leftovers from Tuesday&quot;)</inlineHelpText>
    <label>Prep Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>