force-app/main/default/objects/Planned_Meal__c/fields/Servings__c.field-meta.xml
<CustomField>
    <fullName>Servings__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>Number of servings planned for this meal</inlineHelpText>
    <label>Servings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>