force-app/main/default/objects/Planned_Meal__c/fields/Weekly_Meal_Plan__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Meal_Plan__c</fullName>
    <label>Weekly Meal Plan</label>
    <referenceTo>Weekly_Meal_Plan__c</referenceTo>
    <relationshipLabel>Planned Meals</relationshipLabel>
    <relationshipName>Planned_Meals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>