force-app/main/default/objects/Planned_Meal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meal__c</columns>
    <columns>Meal_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Weekly_Meal_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>