force-app/main/default/objects/Planned_Meal__c/listViews/My_Meal_Plans.listView-meta.xml
<ListView>
    <fullName>My_Meal_Plans</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Weekly_Meal_Plan__c</field>
        <operation>equals</operation>
    </filters>
    <label>My Meal Plans</label>
</ListView>